--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "tsnd --respawn ./src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "tsnd --respawn ./src/server.ts"
+    "typeorm": "tsnd node_modules/typeorm/cli.js"
   },
   "repository": {
     "type": "git",
@@ -19,10 +20,15 @@
   "homepage": "https://github.com/brduarte/NLVChat#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "reflect-metadata": "^0.1.13",
+    "sqlite3": "^5.0.2",
     "ts-node-dev": "^1.1.6",
-    "tsc": "^1.20150623.0"
+    "tsc": "^1.20150623.0",
+    "typeorm": "^0.2.32",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@types/express": "^4.17.11"
+    "@types/express": "^4.17.11",
+    "@types/uuid": "^8.3.0"
   }
 }
